some html correction

--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -1,4 +1,5 @@
-h1.title Our Pricing 
-label.annuallyselect(for="pricingcheck") Annually 
-input.pricingcheck#pricingcheck(type="checkbox" aria-label="Select between annually or monthly price" aria-controls="cards")
-label.monthlyselect(for="pricingcheck") Monthly
+header.header
+  h1.title Our Pricing 
+  label.annuallyselect(for="pricingcheck") Annually 
+  input.pricingcheck#pricingcheck(type="checkbox" aria-label="Select between annually or monthly price" aria-controls="cards")
+  label.monthlyselect(for="pricingcheck") Monthly
