--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,16 +5,18 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Pricing component with toggle
-
+    link(rel="preconnect" href="https://fonts.googleapis.com")
+    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet")
     link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/styles.css")
     script(src="js/scripts.js" type="module") 
 
-  body
+  body.body
     include ../variables
     include ../layout/header
     include ../mixins/card
     main.maincontent
-      #cards(role="status" aria-live="polite" aria-atomic="true" aria-relevant="all")
+      #cards.card-container(role="status" aria-live="polite" aria-atomic="true" aria-relevant="all")
         each plan in plans
           +card(plan)
