--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -2,6 +2,10 @@
   padding-block: 3.2rem 3.8rem;
 
   text-align: center;
+
+  @media screen and (min-width: 1024px) {
+    padding-top: 0;
+  }
 }
 
 .title {
@@ -10,6 +14,10 @@
   font-size: 2.3rem;
 
   color: var(--Grayish-Blue);
+
+  @media screen and (min-width: 1024px) {
+    margin-top: 0;
+  }
 }
 
 .annuallyselect,
@@ -29,6 +37,13 @@
 
   background-image: linear-gradient(to right, var(--Linear-Gradient));
   border-radius: 16px;
+
+  @media screen and (min-width: 1024px) {
+    &:hover {
+      opacity: 0.6;
+      cursor: pointer;
+    }
+  }
 }
 
 .pricingcheck::after {
