--- a/src/sass/layout/main.scss
+++ b/src/sass/layout/main.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 1280px) {
     flex-direction: row;
   }
 }
@@ -20,11 +20,15 @@
   border-radius: 12px;
   color: var(--Grayish-Blue);
 
+  @media screen and (min-width: 1280px) {
+    width: 330px;
+  }
+
   &--primary {
     background-image: linear-gradient(to bottom, var(--Linear-Gradient));
     color: white;
 
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 1280px) {
       padding-block: 3.6rem;
     }
   }
@@ -80,7 +84,7 @@
     border-radius: 8px;
     border: 1px solid transparent;
 
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 1280px) {
       &:hover {
         background-image: none;
         background-color: transparent;
@@ -94,7 +98,7 @@
       background-color: white;
       color: hsl(237, 63%, 64%);
 
-      @media screen and (min-width: 1024px) {
+      @media screen and (min-width: 1280px) {
         &:hover {
           color: white;
           border-color: currentColor;
