--- a/src/sass/layout/main.scss
+++ b/src/sass/layout/main.scss
@@ -4,25 +4,26 @@
   align-items: center;
   justify-content: center;
 
+  width: 100vw;
+
   @media screen and (min-width: 1280px) {
     flex-direction: row;
   }
 }
 
 .card {
-  width: 326px;
   margin-block: 1rem;
   padding: 2rem;
+
+  width: 87%;
+  min-width: 278px;
+  max-width: 348px;
 
   text-align: center;
 
   background-color: white;
   border-radius: 12px;
   color: var(--Grayish-Blue);
-
-  @media screen and (min-width: 1280px) {
-    width: 330px;
-  }
 
   &--primary {
     background-image: linear-gradient(to bottom, var(--Linear-Gradient));
@@ -42,7 +43,7 @@
   &__price {
     margin-block: 0 1.7rem;
 
-    font-size: 4.7rem;
+    font-size: min(18.8vw, 4.7rem);
 
     color: var(--Dark-Grayish-Blue);
 
