--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   @media screen and (min-width: 1280px) {
-    padding-top: 0;
+    padding-block: 4.3rem 3.1rem;
   }
 }
 
