--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,7 +40,7 @@
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding-block: 4.3rem 3.1rem;
+    padding-block: 0 3.5rem;
   }
 }
 
@@ -102,6 +102,7 @@
 @media screen and (min-width: 1280px) {
   .card-container {
     flex-direction: row;
+    margin-bottom: 1rem;
   }
 }
 
